reservation section updated

--- a/index.html
+++ b/index.html
@@ -563,94 +563,24 @@
         <div class="outer-container">
             <div class="outer-box">
                 <div class="row clearfix">
-                    <div class="reserv-col col-lg-6 col-md-12 col-sm-12">
-                        <div class="inner">
+                    <div class="reserv-col col-lg-6 col-md-6 col-sm-6">
+                        <div class="inner" style="width: 100%;">
                             <div class="title-box centered">
-                                <div class="subtitle"><span>Online reservasjon</span></div>
+                                <div class="subtitle"><span>Online Reservation</span></div>
                                 <h2>Book et bord</h2>
-                                <div class="request-info">Ring oss <a href="tel:+47-402-90-979">+47 402 90 979</a> eller fyll ut bestillingsskjemaet</div>
+                                <div class="request-info">Ring oss <a href="tel:+47-402-90-979">+47 402 90 979</a> </div>
                             </div>
-                            <div class="default-form reservation-form">
-                                <form method="post" action="index.html">
-                                    <div class="row clearfix">
-                                        <div class="form-group col-lg-6 col-md-6 col-sm-12">
-                                            <div class="field-inner">
-                                                <input type="text" name="fieldname" value="" placeholder="Your Name" required>
-                                            </div>
-                                        </div>
-                                        <div class="form-group col-lg-6 col-md-6 col-sm-12">
-                                            <div class="field-inner">
-                                                <input type="text" name="fieldname" value="" placeholder="Phone Number" required>
-                                            </div>
-                                        </div>
-                                        <div class="form-group col-lg-4 col-md-6 col-sm-12">
-                                            <div class="field-inner">
-                                                <span class="alt-icon far fa-user"></span>
-                                                <select class="l-icon">
-                                                    <option>1 Person</option>
-                                                    <option>2 Person</option>
-                                                    <option>3 Person</option>
-                                                    <option>4 Person</option>
-                                                    <option>5 Person</option>
-                                                    <option>6 Person</option>
-                                                    <option>7 Person</option>
-                                                </select>
-                                                <span class="arrow-icon far fa-angle-down"></span>
-                                            </div>
-                                        </div>
-                                        <div class="form-group col-lg-4 col-md-6 col-sm-12">
-                                            <div class="field-inner">
-                                                <span class="alt-icon far fa-calendar"></span>
-                                                <input class="l-icon datepicker" type="text" name="fieldname" value="" placeholder="DD-MM-YYYY" required readonly>
-                                                <span class="arrow-icon far fa-angle-down"></span>
-                                            </div>
-                                        </div>
-                                        <div class="form-group col-lg-4 col-md-12 col-sm-12">
-                                            <div class="field-inner">
-                                                <span class="alt-icon far fa-clock"></span>
-                                                <select class="l-icon">
-                                                    <option>08 : 00 am</option>
-                                                    <option>09 : 00 am</option>
-                                                    <option>10 : 00 am</option>
-                                                    <option>11 : 00 am</option>
-                                                    <option>12 : 00 pm</option>
-                                                    <option>01 : 00 pm</option>
-                                                    <option>02 : 00 pm</option>
-                                                    <option>03 : 00 pm</option>
-                                                    <option>04 : 00 pm</option>
-                                                    <option>05 : 00 pm</option>
-                                                    <option>06 : 00 pm</option>
-                                                    <option>07 : 00 pm</option>
-                                                    <option>08 : 00 pm</option>
-                                                    <option>09 : 00 pm</option>
-                                                    <option>10 : 00 pm</option>
-                                                </select>
-                                                <span class="arrow-icon far fa-angle-down"></span>
-                                            </div>
-                                        </div>
-                                        <div class="form-group col-lg-12 col-md-12 col-sm-12">
-                                            <div class="field-inner">
-                                                <textarea name="fieldname" placeholder="Message" required></textarea>
-                                            </div>
-                                        </div>
-                                        <div class="form-group col-lg-12 col-md-12 col-sm-12">
-                                            <div class="field-inner">
-                                                
-                                                <button type="submit" class="theme-btn btn-style-one clearfix">
+                            <div class="centered">
+                                <button type="submit" class="theme-btn btn-style-one clearfix">
                                                     <span class="btn-wrap">
                                                         <span class="text-one">book a table</span>
                                                         <span class="text-two">book a table</span>
                                                     </span>
-                                                </button>
-                                                
-                                            </div>
-                                        </div>
-                                    </div>
-                                </form>
+                                 </button>
                             </div>
                         </div>
                     </div>
-                    <div class="graphic-col col-lg-6 col-md-12 col-sm-12">
+                    <div class="graphic-col col-lg-6 col-md-6 col-sm-6">
                         <div class="inner">
                             <div class="graphic-layer" style="background-image: url(images/background/bookatable.webp);"></div>
                             <div class="image"><img src="images/background/bookatable.webp" alt="image"></div>
