reservation box fixed

--- a/index.html
+++ b/index.html
@@ -564,17 +564,15 @@
             <div class="outer-box">
                 <div class="row clearfix">
                     <div class="reserv-col col-lg-6 col-md-6 col-sm-6">
-                        <div class="inner" style="width: 100%;">
-                            <div class="title-box centered">
+                        <div class="inner" style="width: 100%; display: flex; flex-direction: column; justify-content: center; align-items: center; min-height: 500px; text-align: center;">
+                            <div class="title-box centered" style="min-height: 500px; display: flex; flex-direction: column; justify-content: center; align-items: center; width: 100%;">
                                 <div class="subtitle"><span>Online Reservation</span></div>
                                 <h2>Book et bord</h2>
                                 <div class="request-info">Ring oss <a href="tel:+47-402-90-979">+47 402 90 979</a> </div>
-                            </div>
-                            <div class="centered">
-                                <button type="submit" class="theme-btn btn-style-one clearfix">
+                                  <button type="submit" class="theme-btn btn-style-one clearfix" style="margin-top: 50px;">
                                                     <span class="btn-wrap">
-                                                        <span class="text-one">book a table</span>
-                                                        <span class="text-two">book a table</span>
+                                                        <span class="text-one">BESTILL BORD HER</span>
+                                                        <span class="text-two">BESTILL BORD HER</span>
                                                     </span>
                                  </button>
                             </div>
