reservation in menu page hided

--- a/meny.html
+++ b/meny.html
@@ -364,7 +364,7 @@
     </section>
 
     <!--Reservation Section-->
-    <section class="reserve-section style-two section-kt">
+    <!-- <section class="reserve-section style-two section-kt">
         <div class="image-layer" style="background-image: url(images/background/image-10.jpg);"></div>
         <div class="auto-container">
             <div class="outer-box">
@@ -459,7 +459,7 @@
 
             </div>
         </div>
-    </section>
+    </section> -->
 
     <!--Main Footer-->
     <footer class="main-footer">
