--- a/meny.html
+++ b/meny.html
@@ -28,14 +28,14 @@
                 <div class="animation-preloader">
                     <div class="spinner"></div>
                     <div class="txt-loading">
-                        <span data-text-preloader="R" class="letters-loading">
-                            R
+                        <span data-text-preloader="B" class="letters-loading">
+                            B
                         </span>
-                        <span data-text-preloader="E" class="letters-loading">
-                            E
+                        <span data-text-preloader="A" class="letters-loading">
+                            A
                         </span>
-                        <span data-text-preloader="S" class="letters-loading">
-                            S
+                        <span data-text-preloader="B" class="letters-loading">
+                            B
                         </span>
                         <span data-text-preloader="T" class="letters-loading">
                             T
@@ -43,11 +43,11 @@
                         <span data-text-preloader="O" class="letters-loading">
                             O
                         </span>
-                        <span data-text-preloader="R" class="letters-loading">
-                            R
+                        <span data-text-preloader="U" class="letters-loading">
+                            U
                         </span>
-                        <span data-text-preloader="I" class="letters-loading">
-                            I
+                        <span data-text-preloader="M" class="letters-loading">
+                            M
                         </span>
                         <span data-text-preloader="A" class="letters-loading">
                             A
@@ -217,27 +217,27 @@
                 <div class="image-col col-lg-6 col-md-12 col-sm-12">
 
                     <div class="inner">
-                        <div class="vertical-title"> Starter</div>
+                        <div class="vertical-title"> FATAYER</div>
                         <div class="image"><img src="images/resource/menus-1.jpg" alt="image"></div>
                     </div>
                 </div>
                 <div class="menu-col col-lg-6 col-md-12 col-sm-12">
                     <div class="inner">
                         <div class="title-box">
-                            <h3>Appetizers</h3>
+                            <h3>FATAYER</h3>
                         </div>
                         <!--Block-->
                         <div class="dish-block">
                             <div class="inner-box">
-                                <div class="title clearfix"><div class="ttl clearfix"><h6><a href="#">Stuffed Mushrooms</a></h6></div> <span class="menu-list-line"> </span> <div class="price"><span>$25.50</span></div></div>
-                                <div class="text desc"><a href="#">flavorful, filled with panko bread crumbs, pine nuts, parsley, sun-dried tomatoes, and cheese.</a></div>
+                                <div class="title clearfix"><div class="ttl clearfix"><h6><a href="#">Jibneh<span class="s-info">G,M</span></a></h6></div> <span class="menu-list-line"> </span> <div class="price"><span>kr. 105,-</span></div></div>
+                                <div class="text desc"><a href="#">Fylt med smeltet arabisk ost med en mild og kremet smak</a></div>
                             </div>
                         </div>
                         <!--Block-->
                         <div class="dish-block">
                             <div class="inner-box">
-                                <div class="title clearfix"><div class="ttl clearfix"><h6><a href="#">Jalapeno Poppers <span class="s-info">New</span></a></h6></div> <span class="menu-list-line"> </span><div class="price"><span>$40.00</span></div></div>
-                                <div class="text desc"><a href="#">Greek yogurt filling instead of a traditional cream cheese one. it’s every bit as delicious.</a></div>
+                                <div class="title clearfix"><div class="ttl clearfix"><h6><a href="#">Jibneh Sujuk <span class="s-info">G,M</span></a></h6></div> <span class="menu-list-line"> </span><div class="price"><span>$40.00</span></div></div>
+                                <div class="text desc"><a href="#">Fylt med arabisk ost og krydret kjøttpølse (storfe)</a></div>
                             </div>
                         </div>
                         <!--Block-->
