home slider promo updated

--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
                             <!--Slide Item-->
                             <div class="offer-block-two">
                                 <div class="inner-box">
-                                    <div class="image"><a href="#"><img src="images/resource/special1.jpg" alt="image"></a></div>
+                                    <div class="image"><a href="#"><img src="images/homeslidertwo/food1.webp" alt="image"></a></div>
                                     <!-- <div class="cat-name">main dish</div>
                                     <h5><a href="menu-list-1.html">Greek Salad</a></h5>
                                     <div class="text desc">flavorful, filled with panko bread crumbs, pine nuts, parsley, sun-dried tomatoes.</div>
@@ -429,7 +429,7 @@
                             <!--Slide Item-->
                             <div class="offer-block-two margin-top">
                                 <div class="inner-box">
-                                    <div class="image"><a href="#"><img src="images/resource/special2.jpg" alt="image"></a></div>
+                                    <div class="image"><a href="#"><img src="images/homeslidertwo/food2.webp" alt="image"></a></div>
                                     <!-- <div class="cat-name">desserts</div>
                                     <h5><a href="menu-list-2.html">Tokusen Wagyu</a></h5>
                                     <div class="text desc">Tomatoes, green bell pepper, sliced cucumber onion, olives, avocados with crab meat.</div>
@@ -440,7 +440,7 @@
                             <!--Slide Item-->
                             <div class="offer-block-two">
                                 <div class="inner-box">
-                                    <div class="image"><a href="#"><img src="images/resource/special3.jpg" alt="image"></a></div>
+                                    <div class="image"><a href="#"><img src="images/homeslidertwo/food3.webp" alt="image"></a></div>
                                     <!-- <div class="cat-name">Appetizer</div>
                                     <h5><a href="menu-list-3.html">Butternut Pumpkin</a></h5>
                                     <div class="text desc">Avocados with crab meat, red onion, crab salad stuffed bell pepper, Vegetables.</div>
@@ -451,7 +451,7 @@
                             <!--Slide Item-->
                             <div class="offer-block-two margin-top">
                                 <div class="inner-box">
-                                    <div class="image"><a href="#"><img src="images/resource/special4.jpg" alt="image"></a></div>
+                                    <div class="image"><a href="#"><img src="images/homeslidertwo/food4.webp" alt="image"></a></div>
                                     <!-- <div class="cat-name">main dish</div>
                                     <h5><a href="menu-list-4.html">Opu Fish</a></h5>
                                     <div class="text desc">Vegetables, cheeses, ground meats, tomato sauce, Small bites, big flavors.</div>
