--- a/kontakt.html
+++ b/kontakt.html
@@ -336,6 +336,107 @@
 <div class="scroll-to-top scroll-to-target" data-target="html"><span class="icon fa fa-angle-up"></span></div>
 <!--[if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script><![endif]-->
 
+<!--Sticky Mobile Menu Button-->
+<style>
+@media (max-width: 768px) {
+    .sticky-menu-btn {
+        position: fixed;
+        bottom: 30px;
+        left: 20px;
+        z-index: 999;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 8px;
+        padding: 12px 16px;
+        background: linear-gradient(135deg, #c41e1e 0%, #8b1515 100%);
+        border-radius: 10px;
+        text-decoration: none;
+        box-shadow: 0 8px 20px rgba(196, 30, 30, 0.4);
+        transition: all 0.3s ease;
+        font-size: 16px;
+        font-weight: 600;
+        color: white;
+        animation: bounce-btn 2.5s infinite;
+        border: 2px solid rgba(255, 255, 255, 0.2);
+    }
+
+    .sticky-menu-btn:hover {
+        transform: translateY(-8px) scale(1.1);
+        box-shadow: 0 15px 40px rgba(196, 30, 30, 0.7), 0 0 30px rgba(196, 30, 30, 0.5);
+        background: linear-gradient(135deg, #d42f2f 0%, #a01f1f 100%);
+        border-color: rgba(255, 255, 255, 0.4);
+    }
+
+    .sticky-menu-btn:active {
+        transform: translateY(-2px) scale(0.98);
+    }
+
+    .sticky-menu-btn i {
+        transition: transform 0.4s ease;
+        font-size: 18px;
+    }
+
+    .sticky-menu-btn:hover i {
+        transform: rotate(-25deg) scale(1.3);
+        animation: spin-icon 0.6s ease;
+    }
+
+    @keyframes bounce-btn {
+        0%, 100% {
+            transform: translateY(0) scale(1);
+            box-shadow: 0 8px 20px rgba(196, 30, 30, 0.4);
+        }
+        25% {
+            transform: translateY(-10px) scale(1.05);
+        }
+        50% {
+            transform: translateY(0) scale(1);
+            box-shadow: 0 8px 35px rgba(196, 30, 30, 0.8);
+        }
+        75% {
+            transform: translateY(-5px) scale(1.02);
+        }
+    }
+
+    @keyframes spin-icon {
+        0% {
+            transform: rotate(-25deg) scale(1.3);
+        }
+        50% {
+            transform: rotate(10deg) scale(1.4);
+        }
+        100% {
+            transform: rotate(-25deg) scale(1.3);
+        }
+    }
+
+    @media (max-width: 480px) {
+        .sticky-menu-btn {
+            bottom: 20px;
+            left: 15px;
+            padding: 10px 14px;
+            font-size: 14px;
+        }
+
+        .sticky-menu-btn i {
+            font-size: 16px;
+        }
+    }
+}
+
+@media (min-width: 769px) {
+    .sticky-menu-btn {
+        display: none !important;
+    }
+}
+</style>
+
+<a href="meny.html" class="sticky-menu-btn" title="Se Meny">
+    <i class="fas fa-utensils"></i>
+    <span>Se Meny</span>
+</a>
+
 <script src="js/jquery.js"></script>
 <script src="js/popper.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
