--- a/index.html
+++ b/index.html
@@ -205,9 +205,8 @@
           <span class="line"></span>
 
           <ul class="custom-ul">
-            <li> <a href="#"> FB </a> </li>
-            <li><a href="#"> IN </a> </li>
-            <li><a href="#"> YT </a> </li>
+            <li> <a href="https://facebook.com/bakgaardenpaaloekka/"> FB  </a> </li>
+            <li><a href="https://www.instagram.com/babtoumabar/"> IN </a> </li>
           </ul>
 
           <span class="line"></span>
@@ -332,7 +331,7 @@
                     <div class="data-colom">
                         <div class="title-box"> <h3>Mazzah</h3> </div>
                         <span class="star"> <img src="images/icons/star-element.svg" alt="image"> </span>
-                        <div class="arrow-btn"> <a href="menu-list-4.html"> <i class="fa-light fa-arrow-right"></i> </a> </div>
+                        <div class="arrow-btn"> <a href="meny.html"> <i class="fa-light fa-arrow-right"></i> </a> </div>
                     </div>
                 </div>
 
@@ -347,7 +346,7 @@
                     <div class="data-colom">
                         <div class="title-box"> <h3>Fatayer</h3> </div>
                         <span class="star"> <img src="images/icons/star-element.svg" alt="image"> </span>
-                        <div class="arrow-btn"> <a href="menu-list-2.html"> <i class="fa-light fa-arrow-right"></i> </a> </div>
+                        <div class="arrow-btn"> <a href="meny.html"> <i class="fa-light fa-arrow-right"></i> </a> </div>
                     </div>
                 </div>
 
@@ -362,7 +361,7 @@
                     <div class="data-colom">
                         <div class="title-box"> <h3>Hovedretter</h3> </div>
                         <span class="star"> <img src="images/icons/star-element.svg" alt="image"> </span>
-                        <div class="arrow-btn"> <a href="menu-list-3.html"> <i class="fa-light fa-arrow-right"></i> </a> </div>
+                        <div class="arrow-btn"> <a href="meny.html"> <i class="fa-light fa-arrow-right"></i> </a> </div>
                     </div>
                 </div>
 
@@ -377,7 +376,7 @@
                     <div class="data-colom">
                         <div class="title-box"> <h3>Desserters</h3> </div>
                         <span class="star"> <img src="images/icons/star-element.svg" alt="image"> </span>
-                        <div class="arrow-btn"> <a href="menu-list-1.html"> <i class="fa-light fa-arrow-right"></i> </a> </div>
+                        <div class="arrow-btn"> <a href="meny.html"> <i class="fa-light fa-arrow-right"></i> </a> </div>
                     </div>
                 </div>              
             </div>
@@ -672,9 +671,8 @@
 
                                   <div class="col-lg-4 col-md-4 col-sm-12">
                                     <ul class="social_media">
-                                      <li><a href="#" aria-label="facebook page" ><i class="fa-brands fa-facebook-f"></i></a></li>
-                                      <li><a href="#" aria-label="twitter page"><i class="fa-brands fa-instagram"></i></a></li>
-                                      <li><a href="#" aria-label="pinterest page"><i class="fa-brands fa-youtube"></i></a></li>
+                                      <li><a href="https://facebook.com/bakgaardenpaaloekka/" aria-label="facebook page" ><i class="fa-brands fa-facebook-f"></i></a></li>
+                                      <li><a href="https://www.instagram.com/babtoumabar/" aria-label="instagram page"><i class="fa-brands fa-instagram"></i></a></li>
                                     </ul>
                                   </div>
 
