--- a/kontakt.html
+++ b/kontakt.html
@@ -306,9 +306,8 @@
 
                                   <div class="col-lg-4 col-md-4 col-sm-12">
                                     <ul class="social_media">
-                                      <li><a href="#" aria-label="facebook page" ><i class="fa-brands fa-facebook-f"></i></a></li>
-                                      <li><a href="#" aria-label="twitter page"><i class="fa-brands fa-instagram"></i></a></li>
-                                      <li><a href="#" aria-label="pinterest page"><i class="fa-brands fa-youtube"></i></a></li>
+                                      <li><a href="https://facebook.com/bakgaardenpaaloekka/" aria-label="facebook page" ><i class="fa-brands fa-facebook-f"></i></a></li>
+                                      <li><a href="https://www.instagram.com/babtoumabar/" aria-label="instagram page"><i class="fa-brands fa-instagram"></i></a></li>
                                     </ul>
                                   </div>
 
