DESSERTER spell correction

--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
                     
                     <!--data-->
                     <div class="data-colom">
-                        <div class="title-box"> <h3>Desserters</h3> </div>
+                        <div class="title-box"> <h3>DESSERTER</h3> </div>
                         <span class="star"> <img src="images/icons/star-element.svg" alt="image"> </span>
                         <div class="arrow-btn"> <a href="meny.html"> <i class="fa-light fa-arrow-right"></i> </a> </div>
                     </div>
