hidden bar all pages

--- a/meny.html
+++ b/meny.html
@@ -174,22 +174,21 @@
             <!-- <div class="image-box"><img src="images/resource/sidebar-image.jpg" alt="image" title=""></div> -->
             <div><a href="index.html" title="Bab Touma | Autentisk syrisk mat og opplevelse i hjertet av Oslo"><img src="images/logo.webp" style="alt:image" title="Bab Touma | Autentisk syrisk mat og opplevelse i hjertet av Oslo"></a></div>
 
-            <h5>Besøk oss</h5>
+            <h5 style="margin-top: 100px;">Besøk oss</h5>
             <ul class="info">
-                <li>Thorvald Meyers gate 63 </br> 0552 Oslo</li>
+                <li style="margin-bottom: 100px;">Thorvald Meyers gate 63 </br> 0552 Oslo</li>
                 <h5>ÅPNINGSTIDER</h5>
-                <li><span class="ib-ttl">Bar</span></li>
-                <li>Tirs–Tors: 15:00–01:00</li>
-                <li>Fre: 15:00–03:30</li>
-                <li>Lør: 13:00–03:30</li>
-                <li>Søn: 13:00–01:00</li>
-                <li><span class="ib-ttl">Kjøkken</span></li>
-                <li>Tirs–Tors: 15:00–22:00</li>
-                <li>Fre: 15:00–22:00</li>
-                <li>Lør: 13:00–22:00</li>
-                <li>Søn: 13:00–22:00</li>
+                            <ul>
+                               <li>Mandag : STENGT</li> 
+                                <li>Tirsdag:15:00 – 01:00</li>
+                                <li>Onsdag:	15:00 – 01:00</li>
+                                <li>Torsdag:15:00 – 03:30</li>
+                                <li>Fredag:	15:00 – 03:30</li>
+                                <li>Lørdag:	13:00 – 03:30</li>
+                                <li>Søndag:	15:00 – 01:00</li>
+                            </ul>
             </ul>
-            <div class="booking-info">
+            <div class="booking-info" style="margin-top: 100px;">
                 <div class="bk-no"><a href="tel:+47-402-90-979">Ring oss: +47 402 90 979</a></div>
             </div>
         </div>
