menu item page fixed

--- a/meny.html
+++ b/meny.html
@@ -601,7 +601,7 @@
             <div class="row clearfix">
                 <div class="image-col col-lg-6 col-md-12 col-sm-12">
                     <div class="inner">
-                        <div class="vertical-title"> MEZZAH SHARING  </div>
+                        <div class="vertical-title">SHARING</div>
                         <div class="image"><img src="images/menu/mezzah.jpg" alt="image"></div>
                     </div>
                 </div>
