menu heading adjust

--- a/meny.html
+++ b/meny.html
@@ -201,7 +201,7 @@
         <div class="auto-container">
             <div class="inner">
                 <h1>Meny</h1>
-                <div class="sub_text"> <p> En smak av perfeksjon i hver rett - <span class="primary-color"> fine dining med en moderne vri </span></p> </div>
+                <div class="sub_text"> <p> En smak av perfeksjon i hver rett </br> <span class="primary-color"> fine dining med en moderne vri </span></p> </div>
             </div>
         </div>
     </section>
