sticky menu btn color changed

--- a/index.html
+++ b/index.html
@@ -712,22 +712,22 @@
         justify-content: center;
         gap: 8px;
         padding: 12px 16px;
-        background: linear-gradient(135deg, #c41e1e 0%, #8b1515 100%);
+        background: #ffc107;
         border-radius: 10px;
         text-decoration: none;
-        box-shadow: 0 8px 20px rgba(196, 30, 30, 0.4);
+        box-shadow: 0 8px 20px rgba(21, 44, 41, 0.4);
         transition: all 0.3s ease;
         font-size: 16px;
-        font-weight: 600;
-        color: white;
+        font-weight: 700;
+        color: #000;
         animation: bounce-btn 2.5s infinite;
         border: 2px solid rgba(255, 255, 255, 0.2);
     }
 
     .sticky-menu-btn:hover {
         transform: scale(1.25);
-        box-shadow: 0 15px 40px rgba(196, 30, 30, 0.7), 0 0 30px rgba(196, 30, 30, 0.5);
-        background: linear-gradient(135deg, #d42f2f 0%, #a01f1f 100%);
+        box-shadow: 0 15px 40px rgba(255, 193, 7, 0.7), 0 0 30px rgba(255, 193, 7, 0.5);
+        background: #e0a800;
         border-color: rgba(255, 255, 255, 0.4);
     }
 
@@ -748,11 +748,11 @@
     @keyframes bounce-btn {
         0%, 100% {
             transform: scale(1);
-            box-shadow: 0 8px 20px rgba(196, 30, 30, 0.4);
+            box-shadow: 0 8px 20px rgba(21, 44, 41, 0.4);
         }
         50% {
             transform: scale(1.15);
-            box-shadow: 0 8px 35px rgba(196, 30, 30, 0.8);
+            box-shadow: 0 8px 35px rgba(21, 44, 41, 0.8);
         }
     }
 
@@ -790,7 +790,7 @@
 </style>
 
 <a href="meny.html" class="sticky-menu-btn" title="Se Meny">
-    <i class="fas fa-utensils"></i>
+    <i class="fas fa-concierge-bell"></i>
     <span>Se Meny</span>
 </a>
 
