--- a/kontakt.html
+++ b/kontakt.html
@@ -12,6 +12,7 @@
 <!-- Responsive -->
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+<meta name="theme-color" content="#152C29" />
 <link href="css/responsive.css" rel="stylesheet">
  
 
