button added for order table

--- a/index.html
+++ b/index.html
@@ -771,7 +771,7 @@
 
     @media (max-width: 480px) {
         .sticky-menu-btn {
-            bottom: 20px;
+            bottom: 15px;
             left: 15px;
             padding: 10px 14px;
             font-size: 14px;
@@ -793,6 +793,10 @@
 <a href="meny.html" class="sticky-menu-btn" title="Se Meny">
     <i class="fas fa-concierge-bell"></i>
     <span>Se Meny</span>
+</a>
+<a href="meny.html" class="sticky-menu-btn" title="bestill bord" style="bottom: 80px;">
+    <i class="fas fa-calendar"></i>
+    <span>Bestill Bord</span>
 </a>
 
 <!-- GDPR Consent Banner -->
