table booking btn added link

--- a/kontakt.html
+++ b/kontakt.html
@@ -336,6 +336,7 @@
 <!--[if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script><![endif]-->
 
 <!--Sticky Mobile Menu Button-->
+<!--Sticky Mobile Menu Button-->
 <style>
 @media (max-width: 768px) {
     .sticky-menu-btn {
@@ -358,6 +359,7 @@
         color: #000;
         animation: bounce-btn 2.5s infinite;
         border: 2px solid rgba(255, 255, 255, 0.2);
+        width: 160px;
     }
 
     .sticky-menu-btn:hover {
@@ -406,7 +408,7 @@
 
     @media (max-width: 480px) {
         .sticky-menu-btn {
-            bottom: 20px;
+            bottom: 15px;
             left: 15px;
             padding: 10px 14px;
             font-size: 14px;
@@ -428,6 +430,10 @@
 <a href="meny.html" class="sticky-menu-btn" title="Se Meny">
     <i class="fas fa-concierge-bell"></i>
     <span>Se Meny</span>
+</a>
+<a href="https://selfservice.munu.app/booking/Bab-Touma-Bar" class="sticky-menu-btn" title="bestill bord" style="bottom: 80px;">
+    <i class="fas fa-calendar"></i>
+    <span>Bestill Bord</span>
 </a>
 
 <!-- GDPR Consent Banner -->
