--- a/index.html
+++ b/index.html
@@ -723,6 +723,7 @@
         color: #000;
         animation: bounce-btn 2.5s infinite;
         border: 2px solid rgba(255, 255, 255, 0.2);
+        width: 160px;
     }
 
     .sticky-menu-btn:hover {
@@ -794,7 +795,7 @@
     <i class="fas fa-concierge-bell"></i>
     <span>Se Meny</span>
 </a>
-<a href="meny.html" class="sticky-menu-btn" title="bestill bord" style="bottom: 80px;">
+<a href="https://selfservice.munu.app/booking/Bab-Touma-Bar" class="sticky-menu-btn" title="bestill bord" style="bottom: 80px;">
     <i class="fas fa-calendar"></i>
     <span>Bestill Bord</span>
 </a>
