--- a/meny.html
+++ b/meny.html
@@ -994,6 +994,101 @@
     </div>
 </div>
 
+<!--Sticky Mobile Menu Button-->
+<style>
+@media (max-width: 768px) {
+    .sticky-menu-btn {
+        position: fixed;
+        bottom: 30px;
+        left: 20px;
+        z-index: 999;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 8px;
+        padding: 12px 16px;
+        background: #ffc107;
+        border-radius: 10px;
+        text-decoration: none;
+        box-shadow: 0 8px 20px rgba(21, 44, 41, 0.4);
+        transition: all 0.3s ease;
+        font-size: 16px;
+        font-weight: 700;
+        color: #000;
+        animation: bounce-btn 2.5s infinite;
+        border: 2px solid rgba(255, 255, 255, 0.2);
+        width: 160px;
+    }
+
+    .sticky-menu-btn:hover {
+        transform: scale(1.25);
+        box-shadow: 0 15px 40px rgba(255, 193, 7, 0.7), 0 0 30px rgba(255, 193, 7, 0.5);
+        background: #e0a800;
+        border-color: rgba(255, 255, 255, 0.4);
+    }
+
+    .sticky-menu-btn:active {
+        transform: scale(1.08);
+    }
+
+    .sticky-menu-btn i {
+        transition: transform 0.4s ease;
+        font-size: 18px;
+    }
+
+    .sticky-menu-btn:hover i {
+        transform: rotate(-25deg) scale(1.3);
+        animation: spin-icon 0.6s ease;
+    }
+
+    @keyframes bounce-btn {
+        0%, 100% {
+            transform: scale(1);
+            box-shadow: 0 8px 20px rgba(21, 44, 41, 0.4);
+        }
+        50% {
+            transform: scale(1.15);
+            box-shadow: 0 8px 35px rgba(21, 44, 41, 0.8);
+        }
+    }
+
+    @keyframes spin-icon {
+        0% {
+            transform: rotate(-25deg) scale(1.3);
+        }
+        50% {
+            transform: rotate(10deg) scale(1.4);
+        }
+        100% {
+            transform: rotate(-25deg) scale(1.3);
+        }
+    }
+
+    @media (max-width: 480px) {
+        .sticky-menu-btn {
+            bottom: 15px;
+            left: 15px;
+            padding: 10px 14px;
+            font-size: 14px;
+        }
+
+        .sticky-menu-btn i {
+            font-size: 16px;
+        }
+    }
+}
+
+@media (min-width: 769px) {
+    .sticky-menu-btn {
+        display: none !important;
+    }
+}
+</style>
+<a href="https://selfservice.munu.app/booking/Bab-Touma-Bar" class="sticky-menu-btn" title="bestill bord">
+    <i class="fas fa-calendar"></i>
+    <span>Bestill Bord</span>
+</a>
+
 <script>
 // GDPR Consent Management
 function acceptGDPR() {
