--- a/meny.html
+++ b/meny.html
@@ -98,6 +98,7 @@
                                     <li><a href="index.html">Hjem</a></li>
                                     <li><a href="meny.html">Meny</a></li>
                                     <li><a href="kontakt.html">Kontakt Oss</a></li>
+                                    <li><a href="https://selfservice.munu.app/booking/Bab-Touma-Bar">BESTILL BORD</a></li>
                                 </ul>
                             </nav>
                         </div>
@@ -158,6 +159,7 @@
                     <li><a href="index.html">Hjem</a> </li>
                     <li><a href="meny.html">Meny</a> </li>
                     <li><a href="kontakt.html">Kontakt</a> </li>
+                    <li><a href="https://selfservice.munu.app/booking/Bab-Touma-Bar">BESTILL BORD</a> </li>
                 </ul>
             </div><!-- /.Side-menu -->
         
