--- a/index.html
+++ b/index.html
@@ -570,7 +570,7 @@
                                 <div class="subtitle"><span>Online Reservation</span></div>
                                 <h2>Book et bord</h2>
                                 <div class="request-info">Ring oss <a href="tel:+47-402-90-979">+47 402 90 979</a> </div>
-                                  <button type="submit" class="theme-btn btn-style-one clearfix" style="margin-top: 50px;">
+                                  <button id="openBookingModal" type="submit" class="theme-btn btn-style-one clearfix" style="margin-top: 50px;">
                                                     <span class="btn-wrap">
                                                         <span class="text-one">BESTILL BORD HER</span>
                                                         <span class="text-two">BESTILL BORD HER</span>
@@ -974,5 +974,108 @@ window.addEventListener('load', function() {
 <script src="js/wow.js"></script>
 <script src="js/parallax.min.js"></script>
 <script src="js/custom-script.js"></script>
+<!-- Booking Modal -->
+<div id="bookingModal" class="booking-modal">
+    <div class="booking-modal-content">
+        <span class="close-modal">&times;</span>
+        <munu-booking-widget client-key="6beb11b1-dbd1-43f1-acd9-dc24586b267e"></munu-booking-widget>
+    </div>
+</div>
+
+<style>
+/* Booking Modal Styles */
+.booking-modal {
+    display: none; 
+    position: fixed; 
+    z-index: 9999; 
+    left: 0;
+    top: 0;
+    width: 100%; 
+    height: 100%; 
+    overflow: auto; 
+    background-color: rgba(0,0,0,0.8); 
+    opacity: 0;
+    transition: opacity 0.3s ease;
+    backdrop-filter: blur(5px);
+}
+
+.booking-modal.show {
+    display: block;
+    opacity: 1;
+}
+
+.booking-modal-content {
+    background-color: #1a1a1a;
+    margin: 5% auto; 
+    padding: 20px;
+    border: 2px solid #F3CD68; /* Theme gold color */
+    width: 90%; 
+    max-width: 800px;
+    border-radius: 10px;
+    position: relative;
+    box-shadow: 0 5px 25px rgba(0,0,0,0.5);
+    animation: modalSlideIn 0.4s ease;
+}
+
+@keyframes modalSlideIn {
+    from { transform: translateY(-30px); opacity: 0; }
+    to { transform: translateY(0); opacity: 1; }
+}
+
+.close-modal {
+    color: #F3CD68;
+    float: right;
+    font-size: 32px;
+    font-weight: bold;
+    cursor: pointer;
+    position: absolute;
+    right: 15px;
+    top: 5px;
+    z-index: 100;
+    transition: color 0.3s;
+}
+
+.close-modal:hover,
+.close-modal:focus {
+    color: #fff;
+    text-decoration: none;
+    cursor: pointer;
+}
+</style>
+
+<script type="module" src="https://cdn.munu.services/MunuBookingWidget/widget.js"></script>
+
+<script>
+    // Modal Logic
+    document.addEventListener('DOMContentLoaded', function() {
+        var modal = document.getElementById("bookingModal");
+        var btn = document.getElementById("openBookingModal");
+        var span = document.getElementsByClassName("close-modal")[0];
+
+        if (btn) {
+            btn.onclick = function(e) {
+                e.preventDefault(); 
+                modal.style.display = "block";
+                // Forced reflow to ensure transition works
+                void modal.offsetWidth; 
+                modal.classList.add('show');
+            }
+        }
+
+        if (span) {
+            span.onclick = function() {
+                modal.classList.remove('show');
+                setTimeout(() => modal.style.display = "none", 300);
+            }
+        }
+
+        window.onclick = function(event) {
+            if (event.target == modal) {
+                modal.classList.remove('show');
+                setTimeout(() => modal.style.display = "none", 300);
+            }
+        }
+    });
+</script>
 </body>
 </html>
