--- a/kontakt.html
+++ b/kontakt.html
@@ -463,7 +463,7 @@
     </a>
     <a href="https://selfservice.munu.app/booking/Bab-Touma-Bar" class="sticky-menu-btn" title="bestill bord"
         style="bottom: 80px; margin-top: 10px; z-index: 998;">
-        <i class="fas fa-calendar"></i>
+        <img src="images/icons/tableicon.png" alt="Bestill Bord" style="width: 22px; height: auto;">
         <span>Bestill Bord</span>
     </a>
 
