header bestill bord updated

--- a/index.html
+++ b/index.html
@@ -103,9 +103,19 @@
                                         <li><a href="index.html">Hjem</a></li>
                                         <li><a href="meny.html">Meny</a></li>
                                         <li><a href="kontakt.html">Kontakt Oss</a></li>
-                                        <li><a href="https://selfservice.munu.app/booking/Bab-Touma-Bar">BESTILL
-                                                BORD</a></li>
+                                        <li>
+                                            <div class="link link-btn" style="margin-top: 8px;margin-right: -10px;">
+                                                <a href="https://selfservice.munu.app/booking/Bab-Touma-Bar"
+                                                    class="theme-btn btn-style-one clearfix">
+                                                    <span class="btn-wrap">
+                                                        <span class="text-one">Bestill Bord</span>
+                                                        <span class="text-two">Bestill Bord</span>
+                                                    </span>
+                                                </a>
+                                            </div>
+                                        </li>
                                     </ul>
+
                                 </nav>
                                 <!-- Main Menu End-->
                             </div>
