popup for header

--- a/index.html
+++ b/index.html
@@ -104,15 +104,13 @@
                                         <li><a href="meny.html">Meny</a></li>
                                         <li><a href="kontakt.html">Kontakt Oss</a></li>
                                         <li>
-                                            <div class="link link-btn" style="margin-top: 8px;margin-right: -10px;">
-                                                <a href="https://selfservice.munu.app/booking/Bab-Touma-Bar"
-                                                    class="theme-btn btn-style-one clearfix">
-                                                    <span class="btn-wrap">
-                                                        <span class="text-one">Bestill Bord</span>
-                                                        <span class="text-two">Bestill Bord</span>
-                                                    </span>
-                                                </a>
-                                            </div>
+                                        <button id="openBookingModal" type="submit" class="theme-btn btn-style-one clearfix" style="margin-top: 10px;">
+                                        <span class="btn-wrap">
+                                            <span class="text-one">BESTILL BORD HER</span>
+                                            <span class="text-two">BESTILL BORD HER</span>
+                                        </span>
+                                    </button>
+                                           
                                         </li>
                                     </ul>
 
